--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,8 @@ api-version: '1.20'
 authors: [TheBjoRedCraft]
 website: https://github.com/TheBjoRedCraft
 commands:
+  reload:
+  info:
   rename:
   clear:
   gamemode:
